2012-05-19  Alan Modra  <amodra@gmail.com>

	* config/tc-dlx.c (s_proc): Don't use asprintf.

2012-05-18  Alan Modra  <amodra@gmail.com>

	* config/tc-dlx.c (s_proc): Avoid warning about ignoring asprintf
	return value.

2012-05-18  James Lemke  <jwlemke@codesourcery.com>
	    Alan Modra  <amodra@gmail.com>

	* config/tc-ppc.c: Don't capitalise error and warning messages.
	(md_parse_option): Add checks for -a32 -mvle.

2012-05-18  Alan Modra  <amodra@gmail.com>

	* config/obj-evax.c: Include as.h first.

2012-05-18  Andreas Schwab  <schwab@linux-m68k.org>

	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

2012-05-17  Daniel Richard G.  <skunk@iskunk.org>
	    Nick Clifton  <nickc@redhat.com>

	PR 14072
	* configure.in: Add check that sysdep.h has been included before
	any system header files.
	* configure: Regenerate.
	* config.in: Regenerate.
	* aclocal.m4: Regenerate.
	* Makefile.am: Use wrappers around C files generated by flex.
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.
	* itbl-lex-wrapper.c: New file.
	* config/bfin-lex-wrapper.c: New file.
	* cgen.c: Include as.h before setjmp.h.
	* config/tc-dlx.c: Include as.h before any other header.
	* config/tc-h8300.c: Likewise.
	* config/tc-lm32.c: Likewise.
	* config/tc-mep.c: Likewise.
	* config/tc-microblaze.c: Likewise.
	* config/tc-mmix.c: Likewise.
	* config/tc-msp430.c: Likewise.
	* config/tc-or32.c: Likewise.
	* config/tc-tic4x.c: Likewise.
	* config/tc-tic54x.c: Likewise.
	* config/tc-xtensa.c: Likewise.

2012-05-16  Sergio Durigan Junior  <sergiodj@redhat.com>

	* config/tc-alpha.c (maybe_set_gp): Pass proper `bfd'
	as the first argument for `bfd_get_section_vma'.

2012-05-16  Alberto Garcia  <agarcia@igalia.com>

	PR gas/14082
	* app.c (do_scrub_chars): Prevent possible out of bounds access to
	lex[] array.

2012-05-16  Georg-Johann Lay  <avr@gjlay.de>

	PR target/13503
	* config/tc-avr.c (avr_cons_fix_new): Rename R_AVR_8_HHI8 to
	R_AVR_8_HLO8.