@@ -1,5 +1,10 @@
 2012-05-19  Alan Modra  <amodra@gmail.com>
 
+	* config/obj-elf.c (obj_elf_section): Cater for TC_KEEP_OPERAND_SPACES
+	targets when checking for "comdat".
+
+2012-05-19  Alan Modra  <amodra@gmail.com>
+
 	* config/tc-dlx.c (s_proc): Don't use asprintf.
 
 2012-05-18  Alan Modra  <amodra@gmail.com>
